# benchling-webhook

./: .env.example  .git_worktree  .gitignore  .npmignore  AGENTS.md  CHANGELOG.md  DEV_DEPLOYMENT.md  FINAL_NPM_TASKS_REPORT.md  IMPLEMENTATION_COMPLETE.md  MIGRATION.md  Makefile  NPM_TASKS_IMPLEMENTATION_REPORT.md  PARAMETERS.md  README.benchling.md  README.md  REFACTORING_SUMMARY.md  RELEASE.md  RELEASE_NOTES.md  TEST_STATUS_REPORT.md  app-manifest.yaml  cdk.context.json  cdk.json  env.template  eslint.config.js  eslint.config.mjs  jest.config.js  jest.integration.config.js  package-lock.json  package.json  renovate.json  tsconfig.json
.github/workflows/: ci.yaml  config-validation.yml  prod.yml  release.yaml  test.yaml
.scratch/: check-availability.sh  package-lock.json  package.json  test-npm-import.mjs
.scratch/119-use-docker/: 02-analysis.md  03-specifications.md
.scratch/141-ux-improvements/: 05-phase1-design.md  06-phase1-episodes.md
.scratch/cli/: CLI_SPEC.md  DOCUMENTATION_UPDATES.md  IMPLEMENTATION_CHECKLIST.md  (+3 more)
coverage/: clover.xml  coverage-final.json  lcov.info
doc/: DEPLOYMENT_GUIDE.md  DEV_DEPLOYMENT.md  NPM_OIDC_SETUP.md  PARAMETERS.md  RELEASE.md  RELEASE_NOTES.md
docker/: .flake8  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.backup-python-slim  Makefile  README.md  app-manifest.yaml  docker-compose.yml  env.template  health  make.deploy  pyproject.toml  pyrightconfig.json  start-unit.sh  unit-config.json
docker/scripts/: benchling-webhook-config  create_dist.py  docker.py  experiment_search_syntax.py  run_local.py  test_benchling.py  test_integration.py  test_query.py  test_webhook.py
docker/src/: README.md  app.py  canvas.py  canvas_blocks.py  canvas_formatting.py  config.py  config_provider.py  config_resolver.py  config_schema.py  entry_packager.py  entry_references.py  lambda_authorizer.py  models.py  package_event.py  package_files.py  package_query.py  packages.py  packaging_consumer.py  packaging_publisher.py  pagination.py  payload.py  retry_utils.py  secrets_manager.py  secrets_resolver.py  sqs_consumer.py  unit_app.py  version.py  webhook_verification.py  xdg_cli.py  xdg_config.py
docker/src/auth/: __init__.py  role_manager.py
docker/tests/: conftest.py  test_app.py  test_browse_linked_packages.py  test_canvas.py  test_canvas_blocks_footer.py  test_canvas_browser.py  test_canvas_formatting.py  test_canvas_updating_blocks.py  test_config_env_vars.py  test_config_validation.py  test_degraded_startup.py  test_entry_packager.py  test_entry_references.py  test_flexible_routes.py  test_lambda_authorizer.py  test_package_event.py  test_package_files.py  test_package_query.py  test_packages.py  test_packaging_consumer.py  test_packaging_publisher.py  test_pagination.py  test_payload.py  test_retry_utils.py  test_role_manager.py  test_secrets_resolver.py  test_sqs_consumer.py  test_version.py  test_webhook_verification.py
docker/tests/test_data/: app-config-updated.json  app-deactivated.json  app-installed.json  canvas-interaction.json
docs/: ADR-001-SECRETS-MANAGEMENT.md  CONFIG.md  IP-FILTERING.md  MIGRATION_GUIDE_V06.md  RELEASE_NOTES.md  SECRETS_CONFIGURATION.md  integrated-stack-setup.md  xdg-cli-migration.md
lib/: README.md  alb-api-gateway.ts  api-gateway.ts  benchling-auth-validator.ts  benchling-webhook-stack.ts  canvas-state-machine.ts  canvas-workflow.ts  config-logger.ts  configuration-saver.ts  configuration-validator.ts  configuration-wizard.ts  constants.ts  context-detector.ts  ecr-repository.ts  fargate-service.ts  http-api-gateway.ts  index.ts  network-load-balancer.ts  next-steps-generator.ts  oauth-tester.json  package-entry-state-machine.ts  packaging-state-machine.ts  private-nlb.ts  quilt-config-resolver.ts  rest-api-gateway.ts  s3-bucket-validator.ts  state-machine.ts  types.ts  vpc-link-gateway.ts  waf-web-acl.ts  webhook-state-machine.ts  xdg-base.ts  xdg-cli-wrapper.ts  xdg-config-legacy.ts  xdg-config.ts
scripts/: benchling-webhook-config.sh  check-logs.ts  config-health-check.ts  dev-deploy.ts  discover-vpc.ts  get-dev-version.ts  infer-quilt-config.ts  infer-quilt-config.ts.orig  infer-quilt-config.ts.rej  install-wizard.ts  list-quilt-stacks.ts  monitor-deployment.sh  phase8-cleanup.sh  phase8-validation.sh  release-notes.sh  send-event.ts  sync-secrets.ts  test-invalid-signature.ts  test-lambda-bundle.sh  test-minimal.sh  version.ts
spec/: 170-no-alb.md  2025-11-24-arch.md  2025-11-25-arch.md  260325-customer-feedback.md  README.md  RESULTS.md  WORKFLOW.md  a02-prod-docker.md  a03-browse-linked-packages.md  a04-fastapi.md  a05-smart-status.md  a06-uncache-secrets.md  a07-library-config-review.md  a08-test-scenarios.md  a10-async-updates.md  a11-async-sqs.md  entry-link-types.json  logs-dashboard-specification.md  manual-stack-selection-secret-detection.md
test/: .test.env  alb-api-gateway.test.ts  api-gateway.test.ts  app-homepage-canvas.json  app-installed.json  app-interaction.json  app-list.json  app-manifest.yaml  benchling-auth-validator.test.ts  benchling-webhook-stack.test.ts  benchling-webhook-stack.test.ts.bak  benchling-webhook.test.ts  canvas-created.json  canvas-initialized.json  config-transform.test.ts  configuration-saver.test.ts  configuration-validator.test.ts  configuration-wizard.test.ts  deploy-npx-compatibility.test.ts  deploy.test.ts  entry-app-canvas.json  entry-created.json  entry-registered.json  entry-review.json  entry-updated.json  entry.json  http-api-gateway.test.ts  infer-quilt-config.test.ts  manifest.test.ts  multi-environment-fargate-service.test.ts  multi-environment-fargate-service.test.ts.bak  multi-environment-profile.test.ts  multi-environment-stack.test.ts  openapi.yaml  packaging-state-machine.test.ts  post-app-canvas.json  post-app-canvases.json  process-export.test.ts  quilt-config-resolver.test.ts  rest-api-gateway.test.ts  (+17 more)
test-events/: app-activate-requested.json  app-list.json  athena-fail.json  canvas-created.json  canvas-initialized.json  entry-created.json  entry-review-record.json  entry-updated.json  post-app-canvases.json
(+387 files in other folders)
