[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "benchling-quilt-integration"
version = "0.4.7"
description = "Benchling-Quilt Integration Webhook Service"
license = {text = "MIT"}
authors = [
    {name = "Ernest Prabhakar", email = "ernest@quilt.bio"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "Flask==3.0.0",
    "boto3==1.34.0",
    "dataclasses-json>=0.5.2,<0.6.0",
    "python-dotenv==1.0.0",
    "structlog==23.2.0",
    "requests==2.31.0",
    "tenacity>=8.2.0",
    "benchling-sdk>=1.23.0",
    "quilt3>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-mock==3.12.0",
    "pytest-cov==4.1.0",
    "pytest-xdist==3.5.0",
    "black~=24.4",
    "flake8==7.0.0",
    "isort==5.13.2",
]
docs = [
    "sphinx==7.2.6",
    "sphinx-rtd-theme==2.0.0",
]

[project.urls]
Homepage = "https://github.com/quiltdata/enterprise"
Repository = "https://github.com/quiltdata/enterprise.git"
Documentation = "https://github.com/quiltdata/enterprise/tree/master/benchling"
Issues = "https://github.com/quiltdata/enterprise/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 119
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 119
known_first_party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--color=yes",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "local: Tests that require AWS access and can only run locally",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
